Database and data addition has been completed

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,12 @@
   <body>
     {% include 'navbar.html' %}
 
+    <div class="row">
+        <div class="col">
+            {% include 'alerts.html' %}
+        </div>
+    </div>
+
     <!-- main content placeholder -->
     <!-- with a container and centered -->
     <main class="container mx-auto">
