added user auth login logout register 50% completed

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,6 +21,11 @@
             {{ form.password(class='form-control ') }}
         </div>
 
+        <div class="mt-3">
+             {{ form.remember_me(class='form-check-input', id='remember') }}
+             {{ form.remember_me.label(class='form-check-label ', for='remember') }}
+        </div>
+
 
         <div class="mt-3">
             {{ form.submit(class='btn btn-primary w-100') }}
