--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -17,14 +17,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a
-          class="nav-link active"
-          aria-current="page"
-          href="{{ url_for('index')}}"
-          >Home</a
-        >
-        <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
-        <a class="nav-link" href="#">Pricing</a>
+        {% if current_user.is_authenticated %}
+        <a class="nav-link" href="{{ url_for('contact') }}">Add Contact</a>
+        <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
+        {% else %}
+        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+        <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+        {% endif %}
       </div>
     </div>
   </div>
