--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
 
     <!-- main content placeholder -->
     <!-- with a container and centered -->
-    <main class="container mx-auto">
+    <main class=" mx-auto">
       {% block main_content %} {% endblock %}
     </main>
 
