--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -6,43 +6,54 @@
 <!-- main content -->
 
 {% block main_content %}
-    <h1 class="text-center">Register</h1>
-    <form action="" method="post" class="w-100 mx-auto w-md-50">
-        {{ form.csrf_token }}
-
-        <div class="mt-3">
-            {{ form.first_name.label(class='form-label ') }}
-            {{ form.first_name(class='form-control ') }}
+    <section class="row" style="min-height: 100vh;">
+        <div class="col">
+           <img src="{{ url_for('static', filename='images/header.jpg')}}" alt="Nice boat by the wayside"
+      width="100%" height="100%" class="shadow-lg object-fit-cover "
+    >
         </div>
+        <div class="col p-5">
+            <h1 class="text-center">Register</h1>
+        <form action="" method="post" class="w-100 mx-auto ">
+            {{ form.csrf_token }}
 
-        <div class="mt-3">
-            {{ form.last_name.label(class='form-label ') }}
-            {{ form.last_name(class='form-control ') }}
+            <div class="row gap-3">
+                <div class="mt-3 col">
+                {{ form.first_name.label(class='form-label ') }}
+                {{ form.first_name(class='form-control ') }}
+            </div>
+
+            <div class="mt-3 col">
+                {{ form.last_name.label(class='form-label ') }}
+                {{ form.last_name(class='form-control ') }}
+            </div>
+            </div>
+
+            <div class="mt-3">
+                {{ form.email.label(class='form-label ') }}
+                {{ form.email(class='form-control', placeholder='Eg: heslopd23@yahoo.com') }}
+            </div>
+
+            <div class="mt-3">
+                {{ form.image_url.label(class='form-label ') }}
+                {{ form.image_url(class='form-control', placeholder="(Optional)") }}
+            </div>
+
+            <div class="mt-3">
+                {{ form.password.label(class='form-label ') }}
+                {{ form.password(class='form-control ') }}
+            </div>
+
+            <div class="mt-3">
+                {{ form.confirm_password.label(class='form-label ') }}
+                {{ form.confirm_password(class='form-control ') }}
+            </div>
+
+            <div class="mt-3">
+                {{ form.submit(class='btn btn-primary w-100') }}
+            </div>
+
+        </form>
         </div>
-
-        <div class="mt-3">
-            {{ form.email.label(class='form-label ') }}
-            {{ form.email(class='form-control ') }}
-        </div>
-
-        <div class="mt-3">
-            {{ form.image_url.label(class='form-label ') }}
-            {{ form.image_url(class='form-control ') }}
-        </div>
-
-        <div class="mt-3">
-            {{ form.password.label(class='form-label ') }}
-            {{ form.password(class='form-control ') }}
-        </div>
-
-        <div class="mt-3">
-            {{ form.confirm_password.label(class='form-label ') }}
-            {{ form.confirm_password(class='form-control ') }}
-        </div>
-
-        <div class="mt-3">
-            {{ form.submit(class='btn btn-primary w-100') }}
-        </div>
-
-    </form>
+    </section>
 {% endblock %}
